--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="navigation">
       <nav class="navMenu">
         <li class="logo"><a href="">Coffee Order System</a></li>
+        <li class="right"><a class="active" href="Login.html">Login</a></li>
         <li class="orderCheck"><a href="/orderStatus.html">Order Status</a></li>
       </nav>
     </div>
