--- a/login.html
+++ b/login.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="login.css" />
     <title>Login/Registeration</title>
   </head>
@@ -13,40 +12,23 @@
     </ul>
 
     <div class="container">
-      <form>
-        <div class="row">
-          <h2 style="text-align: center">
-            Login with Social Media or Manually
-          </h2>
-          <div class="vl">
-            <span class="vl-innertext">or</span>
-          </div>
+      <h1>login</h1>
+      <hr />
 
-          <div class="col">
-            <a href="#" class="fb btn">
-              <i class="fa fa-facebook fa-fw"></i> Login with Github
-            </a>
-            <a href="#" class="google btn">
-              <i class="fa fa-google fa-fw"></i> Login with Google
-            </a>
-          </div>
-
-          <div class="col">
-            <div class="hide-md-lg">
-              <p>Or sign in manually:</p>
-            </div>
-
-            <input type="text" id="username" placeholder="Username" required />
-            <input
-              type="password"
-              id="password"
-              placeholder="Password"
-              required
-            />
-            <input type="button" onclick="login()" value="Login" />
-          </div>
-        </div>
-      </form>
+      <div class="group">
+        <label for="usernameLogin" class="label">Username</label>
+        <input id="usernameLogin" type="text" class="input" />
+      </div>
+      <div class="group">
+        <label for="passwordLogin" class="label">Password</label>
+        <input
+          id="passwordLogin"
+          type="password"
+          class="input"
+          data-type="password"
+        />
+      </div>
+      <input type="submit" class="button" value="Sign In" onclick="login()" />
     </div>
 
     <div class="bottom-container">
@@ -59,5 +41,6 @@
         </div>
       </div>
     </div>
+    <script src="configuration.js"></script>
   </body>
 </html>
