--- a/register.html
+++ b/register.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="navbar.css" />
     <link rel="stylesheet" href="register.css" />
-    <title>Registeration</title>
+    <title>Registration</title>
   </head>
   <body>
     <ul class="topnav">
@@ -13,74 +12,43 @@
       <li class="right"><a class="active" href="login.html">Login</a></li>
     </ul>
 
-    <form id="signupForm" style="border: 1px solid #ccc">
-      <div class="container">
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr />
-
-        <label for="email"><b>Email</b></label>
-        <input
-          type="text"
-          placeholder="Enter Email"
-          name="email"
-          id="email"
-          required
-        />
-
-        <label for="username"><b>Username</b></label>
-        <input
-          type="text"
-          placeholder="Enter Username"
-          name="username"
-          id="username"
-          required
-        />
-
-        <label for="password"><b>Password</b></label>
-        <input
-          type="password"
-          placeholder="Enter Password"
-          name="password"
-          id="password"
-          required
-        />
-
-        <button type="button" class="signupbtn" onclick="submitForm()">
-          Sign Up
-        </button>
+    <div>
+      <div>
+        <label for="username" class="label">Username</label>
+        <input id="username" type="text" class="input" />
       </div>
-    </form>
+      <div>
+        <label for="password" class="label">Password</label>
+        <input
+          id="password"
+          type="password"
+          class="input"
+          data-type="password"
+        />
+      </div>
+      <div>
+        <label for="repassword" class="label">Repeat Password</label>
+        <input
+          id="repassword"
+          type="password"
+          class="input"
+          data-type="password"
+        />
+      </div>
+      <div>
+        <label for="email" class="label">Email Address</label>
+        <input id="email" type="text" class="input" />
+      </div>
+      <div>
+        <input
+          type="submit"
+          class="button"
+          value="Sign Up"
+          onclick="signup()"
+        />
+      </div>
+    </div>
 
-    <script>
-      function submitForm() {
-        var email = document.getElementById("email").value;
-        var username = document.getElementById("username").value;
-        var password = document.getElementById("password").value;
-
-        var formData = {
-          email: email,
-          username: username,
-          password: password,
-        };
-
-        fetch("http://localhost:8080/signup", {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-          },
-          body: JSON.stringify(formData),
-        })
-          .then((response) => {
-            if (response.ok) {
-              window.location.href = "login.html";
-              console.error("Error:", response.statusText);
-            }
-          })
-          .catch((error) => {
-            console.error("Error:", error);
-          });
-      }
-    </script>
+    <script src="configuration.js"></script>
   </body>
 </html>
